Closed Bug 328198 Opened 20 years ago Closed 19 years ago

An <li> instead of <span> with a role gets spoken as "custom control"

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access, fixed1.8.1)

Attachments

(2 files)

Load the attached testcase. It is a DHTML tree view. It uses <li x2:role="wairole:treeitem">. For some reason using <li> makes the tree items unrecognizable to Window-Eyes, which then speaks "custom control". The correctly working version (which uses spans) is here: http://www.mozilla.org/access/dhtml/tree-crossbrowser
Attached file Test case
Blocks: fox2access
Blocks: aria
We no longer need to explicitly clear STATE_FOCUSABLE since nsAccessible::GetState() now only sets it if the item is truly focusable. It used to assume we were a widget and non-widgets had to clear that staet.
Attachment #228326 - Flags: review?(pilgrim)
Attachment #228326 - Flags: review?(pilgrim) → review+
Attachment #228326 - Flags: superreview?(neil)
Attachment #228326 - Flags: superreview?(neil) → superreview+
Attachment #228326 - Flags: approval1.8.1?
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 228326 [details] [diff] [review] Allow name if it has a DHTML role and focusable state in general a=drivers for 181 branch
Attachment #228326 - Flags: approval1.8.1? → approval1.8.1+
Keywords: fixed1.8
Keywords: fixed1.8fixed1.8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: