Bug 328198. An <li> instead of <span> with a role gets spoken as custom control. r=pilgrim, sr=neil